--- a/MarketPlaceWebApi/appsettings.json
+++ b/MarketPlaceWebApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=host.docker.internal;Port=5432;Database=market_place;Username=postgres;Password=postgres"
+  },
+  "AppSettings": {
+    "Secret": "your secret string for private key",
+    "JwtTokenTTL": 30, // minute
+    "RefreshTokenTTL": 60 // minute
   }
 }
