--- a/MarketPlaceWebApi/appsettings.json
+++ b/MarketPlaceWebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=host.docker.internal;Port=5432;Database=market_place;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=your_db;Username=postgres;Password=postgres"
   },
   "AppSettings": {
     "Secret": "your secret string for private key",
