--- a/MarketPlaceWebApi/Dockerfile
+++ b/MarketPlaceWebApi/Dockerfile
@@ -9,17 +9,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["MarketPlaceWebApi.csproj", "."]
-RUN dotnet restore "./././MarketPlaceWebApi.csproj"
+COPY ["AuthenticationWebApi.csproj", "."]
+RUN dotnet restore "./././AuthenticationWebApi.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "./MarketPlaceWebApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./AuthenticationWebApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./MarketPlaceWebApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./AuthenticationWebApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "MarketPlaceWebApi.dll"]
+ENTRYPOINT ["dotnet", "AuthenticationWebApi.dll"]
